fix mobile scrollbar

--- a/src/main/resources/public/scss/sections/sidebar.scss
+++ b/src/main/resources/public/scss/sections/sidebar.scss
@@ -100,7 +100,7 @@
               }
             }
 
-            &.active {
+            &.active, &.touchHover {
               border-top-color: $COLOR--black-two;
               background-color: $COLOR--black-two;
               color: #a3c644;
